@@ -1242,6 +1242,11 @@ Mon Apr 22 20:44:56 CEST 2002
 	
 	- Synced preproc.y with gram.y.
 	- Synced keywords.c.
+
+Sun Apr 28 19:16:40 CEST 2002
+
+	- Synced preproc.y with gram.y.
+	- Fixed typo in comment printed by ecpg.
 	- Set ecpg version to 2.10.0.
 	- Set library version to 3.4.0.
 
